[package]
name = "proc_macro_def"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { features = ["full"], version = "2.0.18" }
backtrace = "0.3"
im = "15.1.0"
maplit = "1.0.2"
anyhow = "1.0.75"