[package]
name = "composite_types"
version = "0.1.1"
edition = "2021"
authors = [
    "Zachary Bilmen <zb3qk@virginia.edu>",
]
repository = "https://github.com/zb3qk/type_combinations"
documentation = "https://docs.rs/composite_types/"
license = "MIT OR Apache-2.0"
keywords = ["proc_macro", "typescript"]
categories = ["data-structures"]
description = "Compose type definitions in the style of typescript."
readme = "../README.md"
rust-version = "1.71.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { features = ["full"], version = "2.0.18" }
backtrace = "0.3"
im = "15.1.0"
maplit = "1.0.2"
anyhow = "1.0.75"